Added fixes and documentation
